Let's start with this!

--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,30 @@
     <title>Frank CV</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is my first try to make my online CV</p>
+    <!-- Right side -->
+    <div>
+        <h1>Right Side</h1>
+    </div>
+
+    <!-- Left side -->
+    <div>
+        <h2>Left side</h2>
+    </div>
 </body>
 </html>
+
+<!--  
+    
+    How to push changes to git page?
+
+    1. Save the changes: Ctrl + s
+    2. Set the correct clone repo path
+    3. Check status: git status
+    4. Add changes: git add .   or  git add site/index.html
+    5. Check status: git status
+    6. Commit changes: git commint -m "This is a message"
+    7. Check status: git status
+    8. Push changes: git push
+
+
+-->
