First CV's look

--- a/site/index.html
+++ b/site/index.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frank CV</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mi CV Profesional</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Right side -->
-    <div>
-        <h1>Right Side</h1>
-    </div>
+<header>
+  <h1>Francisco Victorio</h1>
+  <p>Desarrollador Web | victoriosantiagofrancisco@gmail.com | +52-5542475211</p>
+</header>
 
-    <!-- Left side -->
-    <div>
-        <h2>Left side</h2>
-    </div>
+<section class="about">
+  <h2>Acerca de Mí</h2>
+  <p>Soy un apasionado desarrollador web con experiencia en la creación de sitios web.</p>
+</section>
+
+<section class="experience">
+  <h2>Experiencia Profesional</h2>
+  <article>
+    <h3>Desarrollador Front-End - CINVESTAV Sede Sur - Dep. Farmacobiologia</h3>
+    <p>mayo 2023 - Presente</p>
+    <ul>
+      <li>Desarrollo y mantenimiento de interfaces de usuario.</li>
+      <li>Colaboración en proyectos de equipo utilizando Julia.</li>
+      <li>Optimización de procesos para mejorar la velocidad de metodos de análisis.</li>
+    </ul>
+  </article>
+  <!-- Agrega más artículos según tu experiencia -->
+</section>
+
+<section class="education">
+  <h2>Educación</h2>
+  <article>
+    <h3>Ingeniería en Comunicaciones y Electrónica - ESIME</h3>
+    <p>2019 - 2023</p>
+  </article>
+  <!-- Agrega más artículos según tu educación -->
+</section>
+
+<footer>
+  <p>¡Gracias por visitar mi CV en línea!</p>
+</footer>
 </body>
 </html>
+
 
 <!--  
     
